src/pages/photography.css
.photography {
  overflow: hidden scroll;
  background-color: var(--black);
}

.photos {
  width: 100vw;
  box-sizing: border-box;
  padding: 0;
  overflow: hidden;
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: center;
  gap: var(--big-padding);
  flex-wrap: wrap;
  padding: var(--big-padding);
}

.photo {
  height: 25vw;
  width: 25vw;
  overflow: hidden;
  background-size: cover;
  border-radius: 1px;
}

.photo:hover {
  cursor: pointer;
}

@media screen and (max-width: 960px) {
  .photos {
    gap: var(--small-padding);
    padding: var(--small-padding);
  }
  .photo {
    height: 35vw;
    width: 35vw;
  }
}

